--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,1 @@
-# update this file with the correct owners:
-# https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
-
-# example:
-    *         @username1 @username2 @username3
+@tegen-ux @tomasordonezg @rastogi-anmol @adwiti @jjtrotti @ANKRITIS
