--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-@tegen-ux @tomasordonezg @rastogi-anmol @adwiti @jjtrotti @ANKRITIS
+@tegen-ux @tomasordonezg @rastogi-anmol @Adwiti1 @jjtrotti @ANKRITIS
