--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -19,11 +19,16 @@
             android:exported="true" />
 
         <activity
-            android:name=".views.HomeActivity"
+            android:name=".views.FollowingMoodEventListActivity"
             android:exported="true" />
 
         <activity
             android:name=".views.LoginActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".views.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
