--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -12,25 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Y"
         tools:targetApi="31">
-
-
+        <activity
+            android:name=".views.ProfileActivity"
+            android:exported="true" />
         <activity
             android:name=".views.SignUpActivity"
             android:exported="true" />
-
         <activity
             android:name=".views.HomeActivity"
             android:exported="true" />
-
         <activity
             android:name=".views.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
