--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Y"
         tools:targetApi="31">
         <activity
+            android:name=".views.DiscoverActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.ProfileActivity"
             android:exported="true" />
         <activity
@@ -23,9 +26,7 @@
             android:exported="true" />
         <activity
             android:name=".views.LoginActivity"
-            android:exported="true">
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".views.MainActivity"
             android:exported="true">
