--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Y"
         tools:targetApi="31">
+        <activity android:name=".views.MoodAddActivity"
+            android:exported="true"/>
         <activity
             android:name=".views.ProfileActivity"
             android:exported="true" />
