--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.Y"
         tools:targetApi="31">
         <activity
+            android:name=".views.MyMoodHistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.MapActivity"
             android:exported="false" />
         <activity
