--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
             android:exported="true" />
         <activity
             android:name=".views.MainActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".views.FollowRequestsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
