--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name=".views.DiscoverActivity"
             android:exported="false" />
         <activity
-            android:name=".views.ProfileActivity"
+            android:name=".views.MyProfileActivity"
             android:exported="true" />
         <activity
             android:name=".views.SignUpActivity"
