Actions should work now hopefully

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Gradle files
 **/.gradle/
 **/build/
-
+!code/gradle/wrapper/gradle-wrapper.jar
 # Local configuration file
 **/local.properties
 
@@ -54,3 +54,6 @@
 # Virtual machine crash logs
 **/hs_err_pid*
 **/replay_pid*
+# FireBase Testing Stuff
+**/firebase.json
+**/.firebaserc
