--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ mockitoCore = "5.7.0"
 mockitoInline = "5.2.0"
 rules = "1.0.2"
 runner = "1.0.2"
+playServicesLocation = "21.3.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -29,6 +30,7 @@ mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockito
 runner = { module = "com.android.support.test:runner", version.ref = "runner" }
 rules = { module = "com.android.support.test:rules", version.ref = "rules" }
 monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
