less of a work in progress, I am sure it will be done today... just need to spruce it up but I have to work on 229

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -59,9 +59,8 @@
         <activity
             android:name=".views.LoginActivity"
             android:exported="true" />
-        <activity android:name=".views.EnhancedMoodActivityWithPhoto"
-            android:exported="true" />
-        <activity android:name=".views.EnhancedMoodActivityWithoutPhoto"
+
+        <activity android:name=".views.EnhancedMoodActivity"
             android:exported="true" />
         <activity
             android:name=".views.MainActivity"
