--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         android:theme="@style/Theme.Y"
         tools:targetApi="31">
         <activity
+            android:name=".views.SearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.PersonalJournalActivity"
             android:exported="false" />
         <activity
