--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         <activity
             android:name=".views.MyProfileActivity"
             android:exported="true" />
+        <activity android:name=".views.UserProfileActivity"
+            android:exported="true"/>
         <activity
             android:name=".views.SignUpActivity"
             android:exported="true" />
