--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ mockitoInline = "5.2.0"
 rules = "1.0.2"
 runner = "1.0.2"
 playServicesLocation = "21.3.0"
+playServicesMaps = "19.1.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -31,6 +32,7 @@ runner = { module = "com.android.support.test:runner", version.ref = "runner" }
 rules = { module = "com.android.support.test:rules", version.ref = "rules" }
 monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
