--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -12,24 +12,24 @@
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
-
-
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/tochange"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/tochange"
         android:supportsRtl="true"
         android:theme="@style/Theme.Y"
         tools:targetApi="31">
+        <activity
+            android:name=".views.SlotMachineActivity"
+            android:exported="false" />
         <activity
             android:name=".views.SearchActivity"
             android:exported="false" />
@@ -48,13 +48,15 @@
         <activity
             android:name=".views.MoodAddActivity"
             android:exported="true" />
-        <activity android:name=".views.UpdateOrDeleteMoodEventActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".views.UpdateOrDeleteMoodEventActivity"
+            android:exported="true" />
         <activity
             android:name=".views.DiscoverActivity"
             android:exported="false" />
-        <activity android:name=".views.UserProfileActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".views.UserProfileActivity"
+            android:exported="true" />
         <activity
             android:name=".views.SignUpActivity"
             android:exported="true" />
@@ -64,7 +66,6 @@
         <activity
             android:name=".views.LoginActivity"
             android:exported="true" />
-
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -80,8 +81,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAo3z504InN2IfH6j1S3KhCLEMsQcJTI3s" />
 
-
-        <activity android:name=".views.EnhancedMoodActivity"
+        <activity
+            android:name=".views.EnhancedMoodActivity"
             android:exported="true" />
         <activity
             android:name=".views.MainActivity"
